# amtrak.gay

./: package-lock.json  package.json
fe/src/: index.ts
proxy/: Cargo.toml
proxy/src/: main.rs
src/: amtk.ts  index.css  index.html
